# license-plate-detection

./: .gitignore  Makefile  README.md  data.yaml  pyproject.toml  requirements.txt  requirements_detectron.txt  requirements_yolo.txt
docs/: mkdocs.yml
docs/docs/: index.md
license_plate_detection/: __init__.py  colab_config.py  config.py  dataset.py  features.py  plots.py  predict.py  predict_detectron.py  predict_yolo.py  train.py  train_detectron.py  train_yolo.py  yolo_utils.py
license_plate_detection/modeling/: predict.py  train.py
models/Detectron2/: model_0004999.pth  model_0009999.pth  model_0014999.pth  model_0019999.pth
notebooks/: exploration.ipynb  predict.ipynb  train.ipynb
reports/Detectron2/: metrics.json
reports/YOLO v11/: args.yaml  results.csv
reports/YOLO v5/: args.yaml  results.csv
reports/YOLO v8/: args.yaml  results.csv
