[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "license_plate_detection"
version = "0.0.1"
description = "License plate detection with different models comparison."
authors = [
  { name = "Artemiy M." },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["license_plate_detection"]
include = ["pyproject.toml", "license_plate_detection/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["license_plate_detection"]
force-sort-within-sections = true

